--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                       </li>
                     </ul><a class="button button-white button-sm" href="#">Nuestro Libro</a>
                   </div>
-                </div><a class="button button-white button-sm" href="#">Nuestro Libro</a>
+                </div>
               </div>
             </div>
           </nav>
@@ -73,27 +73,27 @@
             <div class="box-booking">
               <form class="rd-form rd-mailform booking-form">
                 <div>
-                  <p class="booking-title">Name</p>
+                  <p class="booking-title">Nombre</p>
                   <div class="form-wrap">
                     <input class="form-input" id="booking-name" type="text" name="name" data-constraints="@Required">
-                    <label class="form-label" for="booking-name">Your name</label>
+                    <label class="form-label" for="booking-name">Tu nombre</label>
                   </div>
                 </div>
                 <div>
-                  <p class="booking-title">Phone</p>
+                  <p class="booking-title">Celular</p>
                   <div class="form-wrap">
                     <input class="form-input" id="booking-phone" type="text" name="phone" data-constraints="@Numeric">
-                    <label class="form-label" for="booking-phone">Your phone number</label>
+                    <label class="form-label" for="booking-phone">Tu número de celular</label>
                   </div>
                 </div>
                 <div>
-                  <p class="booking-title">Date</p>
+                  <p class="booking-title">Fecha</p>
                   <div class="form-wrap form-wrap-icon"><span class="icon mdi mdi-calendar-text"></span>
                     <input class="form-input" id="booking-date" type="text" name="date" data-constraints="@Required" data-time-picker="date">
                   </div>
                 </div>
                 <div>
-                  <p class="booking-title">no. of people</p>
+                  <p class="booking-title">nro. de personas</p>
                   <div class="form-wrap">
                     <select data-placeholder="2">
                       <option label="placeholder"></option>
@@ -108,7 +108,7 @@
                   </div>
                 </div>
                 <div>
-                  <button class="button button-lg button-gray-600" type="submit">Check availability</button>
+                  <button class="button button-lg button-gray-600" type="submit">Consultar Disponibilidad</button>
                 </div>
               </form>
             </div>
@@ -123,8 +123,8 @@
               </div>
               <div class="col-lg-6 col-xl-5 wow fadeInRight">
                 <h2>Sobre Nosotras</h2>
-                <p>Pesto is a family owned and operated Italian Restaurant offering a combination of fresh ingredients and authentic Italian cooking.</p>
-                <p>We will make sure you are served the most authentic and fresh Italian dishes, while offering the best customer service. Our kitchen is committed to providing our guests with the best Italian Cuisine.</p>
+                <p>Le ofrecemos una mezcla de sabores y variedad de platillos que podrá degustar desde la comodidad de su hogar.</p>
+                <p>Comprometidas en brindarle la mejor experiencia.</p>
               </div>
             </div>
           </div>
