--- a/contacts.html
+++ b/contacts.html
@@ -47,9 +47,9 @@
                       </li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contactanos aquí</a>
                       </li>
-                    </ul><a class="button button-white button-sm" href="#">Nuestro Libro</a>
+                    </ul>
                   </div>
-                </div><a class="button button-white button-sm" href="#">Nuestro Libro</a>
+                </div>
               </div>
             </div>
           </nav>
@@ -77,7 +77,7 @@
               <div class="box-icon-classic">
                 <div class="box-icon-inner decorate-triangle"><span class="icon-xl linearicons-phone-incoming"></span></div>
                 <div class="box-icon-caption">
-                  <h4><a href="tel:#">1-800-123-1234</a></h4>
+                  <h4><a href="tel:#">+591 71459959</a></h4>
                   <p>Llámanos a este teléfono</p>
                 </div>
               </div>
@@ -86,7 +86,7 @@
               <div class="box-icon-classic">
                 <div class="box-icon-inner decorate-circle"><span class="icon-xl linearicons-map2"></span></div>
                 <div class="box-icon-caption">
-                  <h4><a href="#">51 Francis Street, San Diego, CA 91702 United States</a></h4>
+                  <h4><a href="#">Av.Reducto 4 esquinas</a></h4>
                 </div>
               </div>
             </div>
@@ -94,7 +94,7 @@
               <div class="box-icon-classic">
                 <div class="box-icon-inner decorate-rectangle"><span class="icon-xl linearicons-paper-plane"></span></div>
                 <div class="box-icon-caption">
-                  <h4><a href="mailto:#">info@demolink.org</a></h4>
+                  <h4><a href="mailto:#">RinconDelChef@gmail.com</a></h4>
                   <p>Si tienes alguna pregunta, háznosla saber, contáctanos</p>
                 </div>
               </div>
@@ -170,7 +170,7 @@
                 </ul>
               </div>
             </div>
-            <p class="rights"><span>&copy;&nbsp; </span><span class="copyright-year"></span><span>&nbsp;</span><span>Pesto</span><span>.&nbsp;</span><span>All Rights Reserved.</span><span>&nbsp;</span><a href="#">Privacy Policy</a>. Design&nbsp;by&nbsp;<a href="https://www.templatemonster.com">Templatemonster</a></p>
+            <p class="rights"><span>&copy;&nbsp; </span><span class="copyright-year"></span><span>&nbsp;</span><span>Rincón del chef</span><span>.&nbsp;</span><span>Todos los derechso reservados.</span><span>&nbsp;</span><a href="#">Política de privacidad</a>. Diseñado&nbsp;por&nbsp;<a href="https://www.templatemonster.com">Comida</a></p>
           </div>
         </div>
       </footer>
